--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "ng2-toasty": "^4.0.3",
+    "primeicons": "^1.0.0",
     "primeng": "^6.1.0-rc.1",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
